# vcprompt

./: .ccls  .clang-format  .envrc  .gitignore  .lvimrc  .tasks  CMakeLists.txt  build.zig  config.h  install.sh  justfile  vcprompt-hgst  xmake.lua
cmake/: config.h.cmake  configure.cmake  iwyu.cmake  safeguards.cmake  sqlite3.cmake
src/: capture.c  capture.h  common.c  common.h  cvs.c  cvs.h  fossil.c  fossil.h  git.c  git.h  hg.c  hg.h  svn.c  svn.h  vcprompt.c
